# replicate

./: .gitignore  CLAUDE.md  README.md  export_models.py  pyproject.toml  replicate_metadata.py  requirements.txt  test_prediction.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  push-all.yml  push.yml  yolo11n-push.yml  yoloe11s-push.yml  yolov8s-worldv2-push.yml
custom/: README.md  cog.yaml  predict.py
yolo11n/: README.md  cog.yaml  download.py  predict.py  requirements.txt
yolo26/: README.md  cog.yaml  download.py  predict.py
yolo26/cls/: README.md  cog.yaml  download.py  predict.py
yolo26/detect/: README.md  cog.yaml
yolo26/obb/: README.md  cog.yaml  download.py  predict.py
yolo26/pose/: README.md  cog.yaml  download.py  predict.py
yolo26/seg/: README.md  cog.yaml  download.py  predict.py
yolo26/sem/: README.md  cog.yaml  download.py  predict.py
yoloe11s/: README.md  cog.yaml  download.py  predict.py
yolov8s-worldv2/: README.md  cog.yaml  download.py  predict.py
