# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

# Overview:
# This pyproject.toml file manages the build, packaging, and distribution of the Ultralytics Replicate deployment tools.
# It defines essential project metadata, dependencies, and settings used to develop and deploy YOLO models to Replicate.

# Key Sections:
# - [build-system]: Specifies the build requirements and backend (e.g., setuptools, wheel).
# - [project]: Includes details like name, version, description, authors, dependencies and more.
# - [project.optional-dependencies]: Provides additional, optional packages for extended features.
# - [tool.*]: Configures settings for various tools (pytest, yapf, etc.) used in the project.

# Installation:
# The Replicate deployment tools can be installed using: 'pip install git+https://TOKEN:x-oauth-basic@github.com/ultralytics/replicate.git@main'
# For development purposes, you can install the package in editable mode with: 'pip install -e .'
# This approach allows for real-time code modifications without the need for re-installation.

# Documentation:
# For comprehensive documentation and usage instructions, visit: https://docs.ultralytics.com

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project settings -----------------------------------------------------------------------------------------------------
[project]
name = "ultralytics-replicate"  # Required
dynamic = ["version"]
description = "Deploy YOLO models to Replicate with ready-to-use Cog configurations and automated CI/CD workflows."  # Optional
readme = "README.md"  # Optional
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["Ultralytics", "YOLO", "Replicate", "Computer Vision", "Object Detection", "Deployment"]  # Optional
authors = [
    { name = "Glenn Jocher", email = "glenn.jocher@ultralytics.com" } # Optional
]
maintainers = [
    { name = "Glenn Jocher", email = "glenn.jocher@ultralytics.com" } # Optional
]
classifiers = [# Optional, for a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

# Required dependencies ------------------------------------------------------------------------------------------------
dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision",
    "pillow",
    "numpy",
]

# Optional dependencies ------------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",  # coverage with pytest
    "coverage",  # coverage with unittest
    "mkdocs",
    "cog",  # for local testing
]

[project.urls]  # Optional
"Homepage" = "https://ultralytics.com"
"Source" = "https://github.com/ultralytics/replicate"
"Documentation" = "https://docs.ultralytics.com"
"Bug Reports" = "https://github.com/ultralytics/replicate/issues"
"Changelog" = "https://github.com/ultralytics/replicate/releases"

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = []  # No Python packages, this is a deployment repo

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=30 --color=yes"
norecursedirs = [".git", "dist", "build"]

[tool.ruff]
line-length = 120

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
in-place = true
pre-summary-newline = true
close-quotes-on-newline = true

[tool.codespell]
ignore-words-list = "crate,nd,strack,dota,ane,segway,fo,gool,winn,commend"
skip = '*.csv,*venv*,docs/??/,docs/mkdocs_??.yml'
